syntax = "proto3";

package fast_ml_sgd_regressor;

option csharp_namespace = "Fast.ML.SGDRegressor.Grpc";
option go_package = "fastmlsgdregressorspb";
option java_multiple_files = true;
option java_outer_classname = "FastMLSGDRegressorProto";
option java_package = "com.fastmlsgdregressor";

service SGDRegressorService {
    rpc Train (TrainingRequest) returns (TrainingResponse);
    rpc Predict (PredictionRequest) returns (PredictionResponse);
}

// TODO: как сторить пиклы в базке
// TODO: как передавать пикл в запросе

message TrainingRequest {
    string filepath = 1;
    map<string, string> parameters = 2;
}

message TrainingResponse {
    string configuration = 1;
}

message PredictionRequest {
    string filepath = 1;
}

message PredictionResponse {
    string message = 1;
}
